@@ -188,16 +188,23 @@ hd_hildon_home_dbus_init (HDHildonHomeDBus *dbus)
   priv = dbus->priv = HD_HILDON_HOME_DBUS_GET_PRIVATE (dbus);
 
   dbus->priv->connection = dbus_g_bus_get (DBUS_BUS_SESSION, &error);
+
+  if (error != NULL)
+    {
+      g_warning ("Failed to open connection to session bus: %s\n",
+                 error->message);
+      g_error_free (error);
+      return;
+    }
+
   dbus_error_init (&derror);
   dbus->priv->sysbus_conn = dbus_bus_get (DBUS_BUS_SYSTEM, &derror);
 
-  if (error != NULL || dbus_error_is_set (&derror))
+  if (dbus_error_is_set (&derror))
     {
-      g_warning ("Failed to open connection to bus: %s\n",
-                 error->message);
-
-      g_error_free (error);
-
+      g_warning ("Failed to open connection to system bus: %s\n",
+                 derror.message);
+      dbus_error_free (&derror);
       return;
     }
 
